# curvelops

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.cfg  setup.py
cpp/: fdct2d_wrapper.cpp  fdct3d_wrapper.cpp
curvelops/: __init__.py  _version.py  curvelops.py
curvelops/plot/: __init__.py  _curvelet.py  _generic.py
curvelops/typing/: __init__.py  _typing.py
curvelops/utils/: __init__.py  _utils.py
docs/: .buildinfo  contributing.html  curvelops.html  curvelops.plot.html  curvelops.typing.html  curvelops.utils.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  sg_execution_times.html
docs/_modules/: index.html
docs/_sources/: sg_execution_times.rst.txt
docs/_static/: documentation_options.js
docs/gallery/: index.html  plot_curvelets_in_fk.html  plot_seismic_regularization.html  plot_sigmoid.html  plot_sigmoid_coefficients.html  plot_sigmoid_disks.html  plot_single_curvelet.html  (+1 more)
docssrc/: Makefile
examples/: Demo_FK_Coefficients.ipynb  Demo_Seismic_Regularization.ipynb  Demo_Sigmoid.ipynb  Demo_Sigmoid_Visualization.ipynb  Demo_Single_Curvelet.ipynb  Demo_Single_Curvelet_Interactive.ipynb  README.rst  plot_curvelets_in_fk.py  plot_seismic_regularization.py  plot_sigmoid.py  plot_sigmoid_coefficients.py  plot_sigmoid_disks.py  plot_single_curvelet.py
notebooks/: Single_Curvelet_Interactive.ipynb
tests/: test_fdct.py  test_fdct2d_wrapper.py  test_fdct3d_wrapper.py  test_utils.py
(+30 files in other folders)
