[build-system]
requires = [
    "setuptools",
    "wheel",
    "pybind11>=2.6.0; python_version < '3.11'",
    "pybind11>=2.10.0; python_version >= '3.11'",
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"

[[tool.mypy.overrides]]
module = [
    "curvelops._version",
    "curvelops.fdct2d_wrapper",
    "curvelops.fdct3d_wrapper",
    "pylops",
    "pylops.*",
    "matplotlib",
    "matplotlib.*",
    "mpl_toolkits.axes_grid1",
    "scipy.*",
    "tqdm.*",
]
ignore_missing_imports = true
